--- a/InterpretBank/InterpretBank/SettingsService/UI/GlossarySetup.xaml
+++ b/InterpretBank/InterpretBank/SettingsService/UI/GlossarySetup.xaml
@@ -207,14 +207,6 @@
                                    Padding="5 0 0 5"
                                    FontWeight="Light"
                                    FontSize="10" />
-                            <!--<sdl:MultiSelectComboBox DockPanel.Dock="Bottom"
-                                                     OpenDropDownListAlsoWhenNotInEditMode="True"
-                                                     Margin="5 0 0 0"
-                                                     IsEnabled="{Binding SelectedGlossary, Converter={StaticResource NullToBullConverter}}"
-                                                     ItemsSource="{Binding Tags}"
-                                                     SelectedItems="{Binding SelectedGlossaryTags}"
-                                                     DropdownItemTemplate="{StaticResource TagTemplate}"
-                                                     SelectedItemTemplate="{StaticResource TagTemplate}" />-->
 
                             <multiItemSelect:MultiItemSelectControl DockPanel.Dock="Bottom"
                                                                     SelectedItems="{Binding SelectedGlossaryTags}"
@@ -293,7 +285,7 @@
                     </ListBox>
 
 
-                    <sdl:MultiSelectComboBox Grid.Column="1"
+                    <!--<sdl:MultiSelectComboBox Grid.Column="1"
                                              Grid.Row="1"
                                              OpenDropDownListAlsoWhenNotInEditMode="True"
                                              Margin="5 0 0 0"
@@ -301,7 +293,23 @@
                                              IsEnabled="{Binding SelectedGlossary, Converter={StaticResource NullToBullConverter}}"
                                              DropdownItemTemplate="{StaticResource GlossaryTemplate}"
                                              SelectedItems="{Binding SelectedTagGlossaries}"
-                                             SelectedItemTemplate="{StaticResource GlossaryTemplate}" />
+                                             SelectedItemTemplate="{StaticResource GlossaryTemplate}" />-->
+                    <Label DockPanel.Dock="Top"
+                           Content="Glossaries"
+                           Grid.Column="1"
+                           Grid.Row="1"
+                           Padding="5 0 0 5"
+                           FontWeight="Light"
+                           FontSize="10" />
+                    <multiItemSelect:MultiItemSelectControl Grid.Column="1"
+                                                            Grid.Row="1"
+                                                            Margin="5 0 0 0"
+                                                            ItemsSource="{Binding Glossaries}"
+                                                            IsEnabled="{Binding SelectedGlossary, Converter={StaticResource NullToBullConverter}}"
+                                                            ItemTemplate="{StaticResource GlossaryTemplate}"
+                                                            SelectedItems="{Binding SelectedTagGlossaries}"
+                                                            SelectedItemTemplate="{StaticResource GlossaryTemplate}" />
+
                 </Grid>
             </TabItem>
 
