--- a/InterpretBank/InterpretBank/Booth/BoothWindow.xaml
+++ b/InterpretBank/InterpretBank/Booth/BoothWindow.xaml
@@ -152,7 +152,7 @@
 
                 <GroupBox Grid.Row="1"
                           DockPanel.Dock="Top"
-                          Header="Choose language pair">
+                          Header="Select glossaries">
                     <controls1:GlossariesOrTagsControl2 Margin="0 10 0 0"
                                                         BorderThickness="0" />
                 </GroupBox>
