--- a/InterpretBank/InterpretBank/SettingsService/UI/SettingsMain.xaml
+++ b/InterpretBank/InterpretBank/SettingsService/UI/SettingsMain.xaml
@@ -73,10 +73,20 @@
             <controls:GlossariesOrTagsControl2 Margin="0 5" />
         </GroupBox>
 
-        <StackPanel Grid.Row="3"
-                    Orientation="Horizontal"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Bottom">
+        <DockPanel Grid.Row="3"
+                   LastChildFill="False"
+                   HorizontalAlignment="Stretch"
+                   VerticalAlignment="Bottom">
+            <Button Content="Help"
+                    Cursor="Hand"
+                    Width="120"
+                    Height="30"
+                    Click="HelpButton_OnClick"
+                    HorizontalAlignment="Left"
+                    Style="{StaticResource Sdl.Button.GeneralStyle}"
+                    DockPanel.Dock="Left"
+                    Margin="10 0 10 10" />
+
             <Button Content="Cancel"
                     Cursor="Hand"
                     Width="120"
@@ -96,6 +106,6 @@
                     Style="{StaticResource Sdl.Button.PrimaryStyle}"
                     DockPanel.Dock="Right"
                     Margin="0 0 10 10" />
-        </StackPanel>
+        </DockPanel>
     </Grid>
 </Window>
