--- a/InterpretBank/InterpretBank/Controls/MultiItemSelect/MultiItemSelectCotrol.xaml
+++ b/InterpretBank/InterpretBank/Controls/MultiItemSelect/MultiItemSelectCotrol.xaml
@@ -174,6 +174,7 @@
                     <TextBlock x:Name="AllItemsTextBlock"
                                Text="Items"
                                Focusable="True" />
+                    <!--<Button Content="Select all" Click="SelectAllItemsButton_OnClick"/>-->
                     <ListBox x:Name="AllItemsListBox"
                              SelectionMode="Multiple"
                              SelectionChanged="AllItemsListBox_OnSelectionChanged"
