--- a/Multilingual.Excel.FileType/Multilingual.Excel.FileType/TellMe/WarningWindow/SettingsActionWarning.xaml
+++ b/Multilingual.Excel.FileType/Multilingual.Excel.FileType/TellMe/WarningWindow/SettingsActionWarning.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Multilingual.XML.FileType.TellMe.WarningWindow.SettingsActionWarning"
+﻿<Window x:Class="Multilingual.Excel.FileType.TellMe.WarningWindow.SettingsActionWarning"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:root="clr-namespace:Multilingual.XML.FileType"
+		xmlns:root="clr-namespace:Multilingual.Excel.FileType"
 		mc:Ignorable="d"
 		Title="TellMe Warning"
 		Width="500"
@@ -64,8 +64,9 @@
 					   Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
 					   TextWrapping="Wrap"
 					   Margin="24 8 24 0" />
+
 			<TextBlock Grid.Row="2"
-			           Grid.Column="0"
+					   Grid.Column="0"
 			           Grid.ColumnSpan="2"
 			           Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
 			           HorizontalAlignment="Left"
@@ -94,7 +95,6 @@
 				</Run>
 				<Run Text="{x:Static root:PluginResources.SettingsAction_ExternalHelp_3}" />
 			</TextBlock>
-
 
 			<Button Grid.Row="4"
 					Grid.Column="0"
